--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
     "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6",
-    "@hookform/resolvers": "^5.2.2",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.75.1",
-    "@types/howler": "^2.2.12",
-    "@types/three": "^0.180.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "howler": "^2.2.4",
-    "lucide-react": "^0.546.0",
-    "next-intl": "^4.3.12",
-    "react-hook-form": "^7.65.0",
-    "sharp": "^0.34.4",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.180.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@types/node": "^24.8.1",
-    "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2",
-    "typescript": "^5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
-  }
+        "dev": "next dev --turbopack",
+        "build": "next build --turbopack",
+        "start": "next start",
+        "lint": "eslint"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^5.2.2",
+        "@react-three/drei": "^10.7.6",
+        "@react-three/fiber": "^9.4.0",
+        "@supabase/ssr": "^0.7.0",
+        "@supabase/supabase-js": "^2.75.1",
+        "@types/howler": "^2.2.12",
+        "@types/three": "^0.180.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "howler": "^2.2.4",
+        "lucide-react": "^0.546.0",
+        "next": "15.5.6",
+        "next-intl": "^4.3.12",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-hook-form": "^7.65.0",
+        "sass": "^1.93.2",
+        "sharp": "^0.34.4",
+        "tailwind-merge": "^3.3.1",
+        "three": "^0.180.0",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^24.8.1",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.5.6",
+        "eslint-config-prettier": "^10.1.8",
+        "prettier": "^3.6.2",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
